[tool.poetry]
name = "engi-analysis-notebooks"
version = "0.1.0"
description = ""
authors = ["Holden <holden.bab@outlook.com>"]
readme = "README.md"
packages = [{include = "engi_analysis_notebooks"}]

[tool.poetry.dependencies]
python = ">=3.10,<=3.11"
numpy = "^1.24.2"
scipy = "^1.10.1"
matplotlib = "^3.7.0"
ipykernel = "^6.21.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
